force-app/main/default/objects/FEC_Team_Queue__c/FEC_Team_Queue__c.object-meta.xml
<CustomObject>
    <label>Team Queue</label>
    <nameField>
        <label>Team Queue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>