force-app/main/default/objects/FEC_Team_Queue__c/fields/FEC_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>