force-app/main/default/objects/FEC_Team_Queue__c/fields/FEC_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Queue_Name__c</fullName>
    <description>Trường hiển thị tên của Queue liên quan</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>