force-app/main/default/objects/FEC_Team_Queue__c/fields/FEC_Select_Team__c.field-meta.xml
<CustomField>
    <fullName>FEC_Select_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Team Queue</relationshipLabel>
    <relationshipName>Team_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>