force-app/main/default/objects/FEC_Team_Queue__c/fields/FEC_Team__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team__c</fullName>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>