force-app/main/default/objects/FEC_Team_Queue__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Use this field to lookup to FEC_Team object</description>
    <label>Team Lookup</label>
    <referenceTo>FEC_Team__c</referenceTo>
    <relationshipLabel>Team Queue</relationshipLabel>
    <relationshipName>Team_Queue</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>